--- a/web/html/flow.html
+++ b/web/html/flow.html
@@ -470,7 +470,7 @@
                                             <tbody>
                                             <tr>
                                                 <td>VIDEO</td>
-                                                <td><a href="http://gnn-f05-04:1880/" target="_blank">TED Flow</a></td>
+                                                <td><a href="http://tip:1880/" target="_blank">TED Flow</a></td>
                                                 <td></td>
                                                 <td></td>
                                                 <td></td>
