--- a/web/html/image.html
+++ b/web/html/image.html
@@ -475,10 +475,10 @@
                                 <div style="padding-left: 10px;">
                                     <ul class="ace-thumbnails clearfix">
                                         <li>
-                                            <img width="150" height="150" alt="150x150" src="http://gnn-f02-01:14000/webhdfs/v1/data/sample/cat.jpg?user.name=hadoop&op=open" />
+                                            <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/sample/cat.jpg?user.name=hadoop&op=open" />
                                         </li>
                                         <li>
-                                            <img width="150" height="150" alt="150x150" src="http://gnn-f02-01:14000/webhdfs/v1/data/sample/ad_sunglass.png?user.name=hadoop&op=open" />
+                                            <img width="150" height="150" alt="150x150" src="http://tip:14000/webhdfs/v1/data/sample/ad_sunglass.png?user.name=hadoop&op=open" />
                                         </li>
                                     </ul>
                                 </div>
