--- a/web/html/video.html
+++ b/web/html/video.html
@@ -470,32 +470,32 @@
                                 <ul class="ace-thumbnails clearfix">
                                     <li>
                                         <video width="256" height="144" controls>
-                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/aaron_huey.mp4?user.name=hadoop&op=open">
+                                            <source type="video/mp4" src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/aaron_huey.mp4?user.name=hadoop&op=open">
                                         </video>
                                     </li>
                                     <li>
                                         <video width="256" height="144" controls>
-                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/julia_bacha.mp4?user.name=hadoop&op=open">
+                                            <source type="video/mp4" src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/julia_bacha.mp4?user.name=hadoop&op=open">
                                         </video>
                                     </li>
                                     <li>
                                         <video width="256" height="144" controls>
-                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/alex_steffen.mp4?user.name=hadoop&op=open">
+                                            <source type="video/mp4" src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/alex_steffen.mp4?user.name=hadoop&op=open">
                                         </video>
                                     </li>
                                     <li>
                                         <video width="256" height="144" controls>
-                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/keith_barry_does_brain_magic.mp4?user.name=hadoop&op=open">
+                                            <source type="video/mp4" src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/keith_barry_does_brain_magic.mp4?user.name=hadoop&op=open">
                                         </video>
                                     </li>
                                     <li>
                                         <video width="256" height="144" controls>
-                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/ben_cameron_tedxyyc.mp4?user.name=hadoop&op=open">
+                                            <source type="video/mp4" src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/ben_cameron_tedxyyc.mp4?user.name=hadoop&op=open">
                                         </video>
                                     </li>
                                     <li>
                                         <video width="256" height="144" controls>
-                                            <source type="video/mp4" src="http://gnn-f02-01:14000/webhdfs/v1/data/video/ted/mp4/rory_sutherland_perspective_is_everything.mp4?user.name=hadoop&op=open">
+                                            <source type="video/mp4" src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/rory_sutherland_perspective_is_everything.mp4?user.name=hadoop&op=open">
                                         </video>
                                     </li>
                                 </ul>
