--- a/web/html/word_cloud.html
+++ b/web/html/word_cloud.html
@@ -457,7 +457,7 @@
                                             <pre>fab tf_ko:/data/text/news/hani/*,/user/hadoop/tf_result</pre>
                                             <li>Word Cloud for Top 100</li>
                                             <pre>fab word_cloud:/user/hadoop/tf_result/part-00000,100,/user/hadoop/wordcloud.png</pre>
-                                            <img src="http://gnn-f02-01:14000/webhdfs/v1/user/hadoop/wordcloud.png?user.name=hadoop&op=open">
+                                            <img src="http://tip:14000/webhdfs/v1/user/hadoop/wordcloud.png?user.name=hadoop&op=open">
                                         </ol>
 									</div><!-- /.span -->
 								</div><!-- /.row -->
