--- a/web/html/index.html
+++ b/web/html/index.html
@@ -467,21 +467,31 @@
                                             <pre>
 Available commands:
 
-    train_mnist      [Caffe]  fab train_mnist:gpu=0,mode=GPU,net=net.prototxt
-    predict          [Caffe]  fab predict:bvlc_reference_caffenet,/data/sample/ad_sunglass.png,3
-    word_cloud       [R]      fab word_cloud:/user/hadoop/tf_result/part-00000,100,/user/hadoop/wordcloud.png
-    count_line       [Spark]  fab count_line:/data/image/imagenet/*.txt
-    count_line_with  [Spark]  fab count_line_with:/data/text/wikipedia/ko*,'<page>'
-    grep             [Spark]  fab grep:/data/text/wikipedia/ko*,/user/hadoop/grep_result,'<page>'
-    head             [Spark]  fab head:/data/image/imagenet/*.txt,5
-    ngram_ko         [Spark]  fab ngram:2,/user/hadoop/tf_result,/user/hadoop/ngram_result
-    sql2             [Spark]  fab sql2:'select count(*) from data.news'
-    tf_ko            [Spark]  fab tf_ko:/data/text/news/hani/*,/user/hadoop/tf_result
-    sql              [Hive]   fab sql:'select count(*) from data.news'
-    count            [HDFS]   fab count:/data/text/newsgroup
-    du               [HDFS]   fab du:/data/sample
-    ls               [HDFS]   fab ls:/data/sample
-    text             [HDFS]   fab text:/data/sample/hani_news.head.txt.gz,5
+    caffe.predict          fab caffe.predict:bvlc_reference_caffenet,/data/sample/ad_sunglass.png,3
+    caffe.train_mnist      fab caffe.train_mnist:gpu=0,mode=GPU,net=net.prototxt
+    hdfs.count             fab hdfs.count:/data/text/newsgroup
+    hdfs.du                fab hdfs.du:/data/sample
+    hdfs.ls                fab hdfs.ls:/data/sample
+    hdfs.text              fab hdfs.text:/data/sample/hani_news.head.txt.gz,5
+    hive.sql               fab hive.sql:'select count(*) from data.news'
+    r.word_cloud           fab r.word_cloud:/user/hadoop/tf_result/part-00000,100,/user/hadoop/wordcloud.png
+    snu.em                 fab snu.em:/data/sample/sample_cluster,/user/hadoop/em_result,4,0.01,20
+    snu.kmeans             fab snu.kmeans:/data/sample/sample_cluster,/user/hadoop/kmeans_result,4,0.01,20
+    snu.lm                 fab snu.lm:/data/sample/sample_regression,/user/hadoop/lm_result,3,0.001,0.1,20
+    snu.lr                 fab snu.lr:/data/sample/sample_classification,/user/hadoop/lr_result,3,0.00001,0.1,20
+    snu.pagerank           fab snu.pagerank:/data/sample/sample_pagerank,/user/hadoop/pagerank_result,0.01,10,0.85
+    spark.count_line       fab spark.count_line:/data/image/imagenet/*.txt
+    spark.count_line_with  fab spark.count_line_with:/data/text/wikipedia/ko*,'<page>'
+    spark.doc2sent         fab spark.doc2sent:/user/hadoop/demo/nlp/hani-doc,/user/hadoop/demo/nlp/hani-sent
+    spark.grep             fab spark.grep:/data/text/wikipedia/ko*,/user/hadoop/grep_result,'<page>'
+    spark.head             fab spark.head:/data/image/imagenet/*.txt,5
+    spark.ngram_ko         fab spark.ngram_ko:2,1000,/user/hadoop/tf_result,/user/hadoop/ngram_result
+    spark.select           fab spark.select:/data/text/news/hani/*,/user/hadoop/selected,'1;0'
+    spark.sent2kma         fab spark.sent2kma:/user/hadoop/demo/nlp/1000_news_sample.txt,/user/hadoop/demo/nlp/1000_news_sample_kma.txt,20,4
+    spark.sent2ner         fab spark.sent2ner:/user/hadoop/demo/nlp/1000_news_sample.txt,/user/hadoop/demo/nlp/1000_news_sample_ner.txt,20,4
+    spark.sql              fab spark.sql:'select count(*) from data.news'
+    spark.tf_ko            fab spark.tf_ko:/data/text/news/hani/*,/user/hadoop/tf_result
+    spark.word2vec         fab spark.word2vec:/user/hadoop/demo/nlp/1000_news_sample_kma.txt,대통령
                                             </pre>
                                         </li>
                                     </ol>
