change API port from 8080 to 5555

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -461,7 +461,7 @@
                                             <a href="http://tip:14000/webhdfs/v1/data?user.name=hadoop&op=liststatus">http://tip:14000/webhdfs/v1?user.name=hadoop&op=liststatus</a>
                                         </li>
                                         <li> FUNCTION REST API <br>
-                                            <a href="http://hadoop:tip@tip:8080/api/v1">/api/v1</a>
+                                            <a href="http://hadoop:tip@tip:5555/api/v1">http://tip:5555/api/v1</a>
                                         </li>
                                         <li> FUNCTION CLI
                                             <pre>
