add NN visualization page

--- a/web/html/image_tag.html
+++ b/web/html/image_tag.html
@@ -343,6 +343,15 @@
                         <b class="arrow"></b>
 
                         <ul class="submenu">
+							<li class="">
+								<a href="nn.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Neural Network
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
                             <li class="">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
@@ -352,7 +361,7 @@
                                 <b class="arrow"></b>
                             </li>
 
-                            <li class="">
+                            <li class="active">
                                 <a href="image_tag.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Image Tagging
