--- a/web/html/index.html
+++ b/web/html/index.html
@@ -339,6 +339,15 @@
                         <b class="arrow"></b>
 
                         <ul class="submenu">
+							<li class="">
+								<a href="nn.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Neural Network
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
                             <li class="">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
