--- a/web/html/ocr.html
+++ b/web/html/ocr.html
@@ -343,7 +343,16 @@
                         <b class="arrow"></b>
 
                         <ul class="submenu">
-                            <li class="">
+							<li class="">
+								<a href="nn.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									Neural Network
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
+							<li class="">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Word Cloud
@@ -361,7 +370,7 @@
                                 <b class="arrow"></b>
                             </li>
 
-                            <li class="">
+                            <li class="active">
                                 <a href="ocr.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     OCR
