--- a/web/html/ocr.html
+++ b/web/html/ocr.html
@@ -353,6 +353,15 @@
 							</li>
 
 							<li class="">
+								<a href="nlp.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									NLP
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
+							<li class="">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Word Cloud
