--- a/web/html/word_cloud.html
+++ b/web/html/word_cloud.html
@@ -352,6 +352,15 @@
 								<b class="arrow"></b>
 							</li>
 
+							<li class="">
+								<a href="nlp.html">
+									<i class="menu-icon fa fa-caret-right"></i>
+									NLP
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
                             <li class="active">
                                 <a href="word_cloud.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
