--- a/web/html/image_tag.html
+++ b/web/html/image_tag.html
@@ -409,7 +409,7 @@
                             <li class="">
                                 <a href="document.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
-                                    Document Categorization
+                                    Text Categorization
                                 </a>
 
                                 <b class="arrow"></b>
@@ -446,7 +446,7 @@
 						</li>
 
 						<li>
-							<a href="#">Function</a>
+							<a href="#">Image Categorization</a>
 						</li>
 						<!--li class="active"></li-->
 					</ul><!-- /.breadcrumb -->
