--- a/web/html/function.html
+++ b/web/html/function.html
@@ -391,7 +391,7 @@
                             <li class="">
                                 <a href="document.html">
                                     <i class="menu-icon fa fa-caret-right"></i>
-                                    Document Categorization
+                                    Text Categorization
                                 </a>
 
                                 <b class="arrow"></b>
