change nb_train parameter

--- a/web/html/document.html
+++ b/web/html/document.html
@@ -473,12 +473,12 @@
 										<div class="col-xs-12">
 											<ol>
 												<li>Train Category</li>
-												<pre>fab news.train:/data/text/news/hani/*,1.0,multinomial,/model/spark/news</pre>
+												<pre>fab news.nb_train:/data/text/news/hani/*,1.0,multinomial,/model/spark/news</pre>
 												<pre style="background-color:#38424a">
-Model Accuracy(self):  0.847319943897
-Model Accuracy(all):  0.813100872684</pre>
+Model Accuracy(self):  0.88198881847
+Model Accuracy(all):  0.833137644744</pre>
 												<li>Predict Category</li>
-												<pre>fab news.predict:/model/spark/news,'최근 전국 아파트 분양 시장의'</pre>
+												<pre>fab news.nb_predict:/model/spark/news,'최근 전국 아파트 분양 시장의'</pre>
 												<pre style="background-color:#38424a">economy</pre>
 											</ol>
 										</div><!-- /.span -->
